--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1649864139
+dateModified: 1650041348
 email:
   fromEmail: eva@j2nku.club
   fromName: johanna
@@ -6,8 +6,43 @@ email:
 meta:
   __names__:
     0e225a1c-80a5-4db6-9343-3ae185d662a6: johanna # johanna
+    2a6724c7-4fd8-42de-8bd5-10c0e5b6633b: 'Project Tags' # Project Tags
+    2d61c1e7-c556-425d-a1d4-4823ec5ab45f: About # About
+    3fd2e591-6a83-42e9-9a52-3f00d0de50bc: Project # Project
+    4dfba59c-85c8-4f7c-a453-a3f8bd488b61: Home # Home
+    7e8b7664-450e-47e8-afc2-c41cf7423d7d: 'Home Page' # Home Page
+    8f264fc1-5269-43ae-8c84-23f0c170646b: Home # Home
+    37bb9257-d68f-4555-ab3d-030ca15187cd: Mashup # Mashup
+    44b12adc-4bee-422a-aebb-e7babfabd3f3: 'Index Menu' # Index Menu
+    49d3fa05-4ee1-4703-a8cd-26cf91480509: Year # Year
+    72a8ee1d-be7f-4821-8c09-482cb3cf20ad: 'Tag Description' # Tag Description
+    84d51810-e11d-4478-a648-5b55a20802e2: mashup # mashup
+    92f2fe27-6775-48e0-9a40-070e1237ed8e: 'Project Description' # Project Description
+    117fd35e-4226-4cd9-8f3e-76ac2d7dec3d: Mashup # Mashup
+    622af3e5-e71e-49b1-9b56-306f96f719f5: 'Navigation Extra' # Navigation Extra
+    839dc874-3c8a-48d0-ba8a-e7d5d037fa53: Images # Images
+    62742d15-af06-4c39-b5e8-038b69da251a: 'Project Name' # Project Name
+    70573b4f-43cf-452f-8132-84cfa1ae24d0: Uploads # Uploads
+    91271f9a-1603-401b-8d38-37c2fce5f62a: transform1080p # transform1080p
+    598503ad-c309-42b5-a2bd-dbc996b99acc: 'Project Tag' # Project Tag
+    638197e9-d30d-4976-bd9e-4dfd9a8b0f75: Resume # Resume
     851366e6-9280-4bf5-b2ae-ab3a7b60572b: johanna # johanna
+    4392456b-b888-433c-9d33-a2b4af90b996: Project # Project
     17913697-6bb3-4006-a5cc-2296887d7e4b: Common # Common
+    ba868f57-7a1f-478a-8e99-d0983537a631: 'Featured Image' # Featured Image
+    baa2a0dd-1e2b-4cf1-8f6a-efabd626e605: 'Project Date' # Project Date
+    c1503516-6563-4539-93a7-88d5dc7841d0: 'Navigation Link' # Navigation Link
+    d4ad9e4d-2d32-4b90-b707-f79847a50e7d: 'Navigation Title' # Navigation Title
+    d4f72a2c-acd7-4a3b-844a-b8517846a86d: Tag # Tag
+    ec89517d-8439-4ef4-aa6b-bf8180ab191d: Projects # Projects
+    f25fb894-90c7-43f7-a0cc-058a7821dfd8: 'Resume Item' # Resume Item
+    f818fadf-d1eb-4881-99d7-a55cf48beef0: 'Navigation Destination' # Navigation Destination
+    fda6a6e8-e35a-445c-82fd-14fd99bae140: 'Navigation Links' # Navigation Links
+plugins:
+  redactor:
+    edition: standard
+    enabled: true
+    schemaVersion: 2.3.0
 system:
   edition: solo
   live: true
