fix: letter-spacing.

--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1650041348
+dateModified: 1650065099
 email:
   fromEmail: eva@j2nku.club
   fromName: johanna
@@ -29,6 +29,8 @@ meta:
     851366e6-9280-4bf5-b2ae-ab3a7b60572b: johanna # johanna
     4392456b-b888-433c-9d33-a2b4af90b996: Project # Project
     17913697-6bb3-4006-a5cc-2296887d7e4b: Common # Common
+    a1a82cb6-7a79-4d66-815f-284021400b96: Commercial # Commercial
+    a7372355-e5f2-4144-87c0-316410de8cb3: Commercial # Commercial
     ba868f57-7a1f-478a-8e99-d0983537a631: 'Featured Image' # Featured Image
     baa2a0dd-1e2b-4cf1-8f6a-efabd626e605: 'Project Date' # Project Date
     c1503516-6563-4539-93a7-88d5dc7841d0: 'Navigation Link' # Navigation Link
